--- a/exam-mastery/src/index.css
+++ b/exam-mastery/src/index.css
@@ -38,3 +38,13 @@ body,
   background: #555;
 }
 
+.dropDownProfile{
+  position: absolute;
+  top: 2.5rem;
+  right: 0.02rem;
+  width: 100px;
+  border-radius: 15px;
+  background-color: white;
+  border: 2px solid black; 
+}
+
